Fix CSS styles to support 100% zoom level
Previously, styles were optimized for 80% zoom, which caused layout issues
at default 100% level. Adjusted spacing and scaling for proper rendering.

--- a/styles.css
+++ b/styles.css
@@ -35,13 +35,13 @@ h3,
 }
 
 h2 {
-  font-size: 55px;
+  font-size: 43px;
   margin-top: 80px;
   text-align: center;
 }
 
 .container {
-  width: 550px;
+  width: 375px;
   margin-top: 125px;
   overflow: hidden;
 }
@@ -60,7 +60,7 @@ img {
 }
 
 .recipes {
-  height: 90vh;
+  height: 80vh;
   color: #1d1d1d;
 }
 
